# mcfcg

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml
data/commalab/grid/: grid1  grid10  grid11  grid12  grid13  grid14  grid15  grid2  grid3  grid4  grid5  grid6  grid7  grid8  grid9  optimal.csv
data/commalab/planar/: format.doc  optimal.csv  planar100  planar1000  planar150  planar2500  planar30  planar300  planar50  planar500  planar80  planar800
data/intermodal/: optimal.csv
data/transportation/: optimal.csv
include/mcfcg/: instance.h
include/mcfcg/cg/: cg_loop.h  column.h  flow_workspaces.h  master.h  master_base.h  path_cg.h  pricer.h  pricer_base.h  slack_state.h  tree_cg.h  tree_column.h  tree_master.h  tree_pricer.h
include/mcfcg/graph/: d_ary_heap.h  dijkstra.h  dijkstra_workspace.h  semiring.h  static_digraph.h  static_digraph_builder.h  static_map.h
include/mcfcg/io/: gz_util.h
include/mcfcg/lp/: lp_solver.h
include/mcfcg/util/: limits.h  logger.h  thread_pool.h  timer.h  tolerances.h
scripts/: README.md  download_commalab.sh  generate_instances.py  prepare_intermodal.sh
src/: clean.cpp  main.cpp
src/cg/: path_cg.cpp  tree_cg.cpp
src/io/: commalab_reader.cpp  commalab_writer.cpp  tntp_reader.cpp
src/lp/: copt_solver.cpp  cuopt_solver.cpp  highs_solver.cpp
test/: cg_test_util.h  d_ary_heap_test.cpp  dijkstra_test.cpp  instance_test.cpp  integration_test.cpp  lp_solver_test.cpp  path_cg_test.cpp  reduced_cost_test.cpp  smoke_test.cpp  static_digraph_test.cpp  static_map_test.cpp  test_paths.h  thread_pool_test.cpp  tree_cg_test.cpp
